change personal info

--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -114,4 +114,4 @@ smart_menu:
 friends:
   跟你说晚安: http://www.sleepan.com/
 
-aboutme: 爱生活，爱编程<br><br>也有一颗改变世界的心。<br>谢谢大家
+aboutme: 爱生活，爱编程，爱茜茜，<br><br>也有一颗改变世界的心。<br>谢谢大家
